crates/apollo-compiler/test_data/diagnostics/0030_schema_with_duplicate_input_objects.txt
Error: the type `Point2D` is defined multiple times in the document
    ╭─[0030_schema_with_duplicate_input_objects.graphql:13:7]
    │
  8 │ input Point2D {
    │       ───┬───  
    │          ╰───── previous definition of `Point2D` here
    │ 
 13 │ input Point2D {
    │       ───┬───  
    │          ╰───── `Point2D` redefined here
    │ 
    │ Help: `Point2D` must only be defined once in this document.
────╯

